# AM4LGAM8

./: .gitignore  Cargo.toml  README.md  compile_web.sh  ideas.md
assets/: LICENSE
src/: assets.rs  constants.rs  core.rs  main.rs  texture_atlas_backend.rs
src/bundles/: explosion.rs  mod.rs  tile.rs
src/game/: grid.rs  mod.rs  moves.rs  tile.rs
src/systems/: animations.rs  camera.rs  debug.rs  explosion.rs  game_over.rs  grid.rs  marked_for_deletion.rs  mod.rs  movables.rs  tiles.rs  title_screen.rs  ui.rs
wasm/: index.html
