[package]
name = "ld54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_mod_picking = "0.15.0"
bevy_picking_core = "0.15.0"
